--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		</header>
 		<div id="dropdown" class="dropdown" role="dialog" aria-modal="true">
 			<div class="dropdown__container">
+				<div class="dropdown__closeBtn icon-cross" tabindex="0" role="button"></div>
 				<ul class="dropdown__switcher switcher">
 					<li class="dropdown__switcher-item switcher__item active" data-type="juridical" tabindex="0" role="button">Юридические лица</li>
 					<li class="dropdown__switcher-item switcher__item" data-type="physical" tabindex="0" role="button">Физические лица</li>
@@ -283,7 +284,7 @@
 				<div class="services__container">
 					<div class="services__titlebox">
 						<h2 class="services__tag">Услуги</h2>
-						<h3 class="services__title">Мы оказываем высококвалифицированные услуги в&nbsp;наиболее проблемных областях права</h3>
+						<h3 class="services__title">Мы оказываем высоко&shy;квали&shy;фицированные услуги в&nbsp;наиболее проблемных областях права</h3>
 						<ul class="services__switcher switcher">
 							<li class="services__switcher-item switcher__item active" data-type="juridical" tabindex="0" role="button">Юридические лица</li>
 							<li class="services__switcher-item switcher__item" data-type="physical" tabindex="0" role="button">Физические лица</li>
@@ -679,7 +680,7 @@
 				<div class="footer__body">
 					<a href="./index.html">
 						<picture class="footer__logo">
-							<source srcset="./media/services/logo-fill.svg" media="(max-width: 1100px)" />
+							<!-- <source srcset="./media/services/logo-fill.svg" media="(max-width: 1100px)" /> -->
 							<img src="./media/services/logo-full.png" alt="#" />
 						</picture>
 					</a>
