--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					</svg>
 				</a>
 				<ul class="header__nav" role="navigation">
-					<li class="header__nav-item" data-hover-text="О компании"><a href="./pages/">о Компании</a></li>
+					<li class="header__nav-item" data-hover-text="О компании"><a href="./pages/about.html">о Компании</a></li>
 					<li class="header__nav-item header__nav-item--menu" data-dropdown-open data-hover-text="Услуги"><button>Услуги</button><i class="header__nav-item--icon icon-check-mark"></i></li>
 					<li class="header__nav-item" data-hover-text="Новости"><a href="./pages/">Новости</a></li>
 					<li class="header__nav-item" data-hover-text="Кейсы"><a href="./pages/">Кейсы</a></li>
@@ -180,7 +180,7 @@
 			<div class="touch-menu__container">
 				<div class="touch-menu__closeBtn icon-cross" tabindex="0" role="button"></div>
 				<ul class="touch-menu__list">
-					<li class="touch-menu__item"><a href="./pages/">о Компании</a></li>
+					<li class="touch-menu__item"><a href="./pages/about.html">о Компании</a></li>
 					<li class="touch-menu__item"><button data-dropdown-open>Услуги</button><i class="touch-menu__item--icon icon-check-mark"></i></li>
 					<li class="touch-menu__item"><a href="./pages/">Новости</a></li>
 					<li class="touch-menu__item"><a href="./pages/">Кейсы</a></li>
@@ -271,7 +271,7 @@
 						</div>
 						<div class="staff__content">
 							<p class="staff__text">С деликатной точностью в каждой детали, арбитражный управляющий контролирует каждый процесс в вашем деле. Её компетенции и опыт исходят из глубокого понимания законодательства, что позволяет находить оптимальные решения даже в самых сложных ситуациях.</p>
-							<a class="staff__button" href="./pages/">Подробнее о компании <i class="staff__button--icon icon-arrow"></i></a>
+							<a class="staff__button" href="./pages/about.html">Подробнее о компании <i class="staff__button--icon icon-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -665,7 +665,7 @@
 								<textarea id="input-comment" class="connection__input connection__input--custom" placeholder="Опишите задачу (не обязательно)"></textarea>
 							</div>
 						</div>
-						<p class="connection__footnote">Отправляя запрос, вы соглашаетесь с <a class="connection__footnote-link" href="./pages/">политикой конфиденциальности</a></p>
+						<p class="connection__footnote">Отправляя запрос, вы соглашаетесь с <a class="connection__footnote-link" target="_blank" href="./pages/privacy-policy.html">политикой конфиденциальности</a></p>
 						<button class="connection__button" type="submit">Отправить запрос<i class="connection__button--icon icon-arrow"></i></button>
 					</form>
 				</div>
@@ -685,7 +685,7 @@
 						</picture>
 					</a>
 					<ul class="footer__nav" role="navigation">
-						<li class="footer__nav-item"><a href="./pages/">О Компании</a></li>
+						<li class="footer__nav-item"><a href="./pages/about.html">О Компании</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Услуги</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Новости</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Кейсы</a></li>
@@ -706,8 +706,8 @@
 				<div class="footer__info">
 					<div class="footer__privacy">TALAN &copy; 2025. Все права защищены</div>
 					<ul class="footer__linksbox">
-						<li class="footer__link"><a href="./pages/">Реквизиты</a></li>
-						<li class="footer__link"><a href="./pages/">Политика конфиденциальности</a></li>
+						<li class="footer__link"><a target="_blank" href="./pages/">Реквизиты</a></li>
+						<li class="footer__link"><a target="_blank" href="./pages/privacy-policy.html">Политика конфиденциальности</a></li>
 					</ul>
 					<a href="https://intheplace.ru" class="footer__dev-label">Разработано<img src="./media/services/label.svg" alt="ThePlace" /></a>
 				</div>
