--- a/pages/about.html
+++ b/pages/about.html
@@ -318,6 +318,20 @@
                     </ul>
                 </div>
             </section>
+			<section class="docs">
+				<div class="docs__container">
+					<h2 class="docs__title">Сертификаты</h2>
+					<div class="docs__body">
+						<div class="docs__slider swiper">
+							<div class="docs__slider-wrapper swiper-wrapper">
+								<div class="docs__slide swiper-slide">
+									
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
