--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<ul class="header__nav" role="navigation">
 					<li class="header__nav-item" data-hover-text="О компании"><a href="./pages/about.html">о Компании</a></li>
 					<li class="header__nav-item header__nav-item--menu" data-dropdown-open data-hover-text="Услуги"><button>Услуги</button><i class="header__nav-item--icon icon-check-mark"></i></li>
-					<li class="header__nav-item" data-hover-text="Новости"><a href="./pages/">Новости</a></li>
+					<li class="header__nav-item" data-hover-text="Новости"><a href="./pages/news.html">Новости</a></li>
 					<li class="header__nav-item" data-hover-text="Кейсы"><a href="./pages/">Кейсы</a></li>
 					<li class="header__nav-item" data-hover-text="Контакты"><a href="./pages/">Контакты</a></li>
 				</ul>
@@ -182,7 +182,7 @@
 				<ul class="touch-menu__list">
 					<li class="touch-menu__item"><a href="./pages/about.html">о Компании</a></li>
 					<li class="touch-menu__item"><button data-dropdown-open>Услуги</button><i class="touch-menu__item--icon icon-check-mark"></i></li>
-					<li class="touch-menu__item"><a href="./pages/">Новости</a></li>
+					<li class="touch-menu__item"><a href="./pages/news.html">Новости</a></li>
 					<li class="touch-menu__item"><a href="./pages/">Кейсы</a></li>
 					<li class="touch-menu__item"><a href="./pages/">Контакты</a></li>
 					<li class="touch-menu__item"><button data-form-open>Заказать звонок</button></li>
@@ -687,7 +687,7 @@
 					<ul class="footer__nav" role="navigation">
 						<li class="footer__nav-item"><a href="./pages/about.html">О Компании</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Услуги</a></li>
-						<li class="footer__nav-item"><a href="./pages/">Новости</a></li>
+						<li class="footer__nav-item"><a href="./pages/news.html">Новости</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Кейсы</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Конструктор документов</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Контакты</a></li>
