--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Талан - Юридическая компания</title>
+		<title>Талан - О нас</title>
 		<link rel="stylesheet" href="../styles/css/about-page.css" />
 		<link rel="stylesheet" href="../media/icon-font/style.css" />
 	</head>
@@ -21,7 +21,7 @@
 				<ul class="header__nav" role="navigation">
 					<li class="header__nav-item" data-hover-text="О компании"><a href="about.html">о Компании</a></li>
 					<li class="header__nav-item header__nav-item--menu" data-dropdown-open data-hover-text="Услуги"><button>Услуги</button><i class="header__nav-item--icon icon-check-mark"></i></li>
-					<li class="header__nav-item" data-hover-text="Новости"><a href="./pages/">Новости</a></li>
+					<li class="header__nav-item" data-hover-text="Новости"><a href="news.html">Новости</a></li>
 					<li class="header__nav-item" data-hover-text="Кейсы"><a href="./pages/">Кейсы</a></li>
 					<li class="header__nav-item" data-hover-text="Контакты"><a href="./pages/">Контакты</a></li>
 				</ul>
@@ -182,7 +182,7 @@
 				<ul class="touch-menu__list">
 					<li class="touch-menu__item"><a href="about.html">о Компании</a></li>
 					<li class="touch-menu__item"><button data-dropdown-open>Услуги</button><i class="touch-menu__item--icon icon-check-mark"></i></li>
-					<li class="touch-menu__item"><a href="./pages/">Новости</a></li>
+					<li class="touch-menu__item"><a href="news.html">Новости</a></li>
 					<li class="touch-menu__item"><a href="./pages/">Кейсы</a></li>
 					<li class="touch-menu__item"><a href="./pages/">Контакты</a></li>
 					<li class="touch-menu__item"><button data-form-open>Заказать звонок</button></li>
@@ -659,7 +659,7 @@
 					<ul class="footer__nav" role="navigation">
 						<li class="footer__nav-item"><a href="about.html">О Компании</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Услуги</a></li>
-						<li class="footer__nav-item"><a href="./pages/">Новости</a></li>
+						<li class="footer__nav-item"><a href="news.html">Новости</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Кейсы</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Конструктор документов</a></li>
 						<li class="footer__nav-item"><a href="./pages/">Контакты</a></li>
